--- a/environment.yaml
+++ b/environment.yaml
@@ -4,6 +4,8 @@ channels:
 dependencies:
   - pip=23.2
   - python=3.11.4
+  - pandas=2.0.3
+  - rasterio=1.3.8
   - setuptools=68.0.0
   - wheel=0.40.0
   - bibtexparser=1.4.0
@@ -11,8 +13,14 @@ dependencies:
       - biblib==0.1.3
       - marshmallow-dataclass==8.5.14
       - minio==7.1.15
+      - numpy==1.25.2
       - pika==1.3.2
       - pytest==7.4.0
       - pytest-mock==3.11.1
+      - requests==2.31.0
+      - ruff==0.0.280
       - semver==3.0.1
+      - tifffile==2023.7.18
+      - tqdm==4.65.0
+
 
