--- a/environment.yaml
+++ b/environment.yaml
@@ -15,6 +15,7 @@ dependencies:
       - minio==7.1.15
       - numpy==1.25.2
       - pika==1.3.2
+      - pre-commit=3.3.3
       - pytest==7.4.0
       - pytest-mock==3.11.1
       - requests==2.31.0
