--- a/environment.yaml
+++ b/environment.yaml
@@ -16,6 +16,7 @@ dependencies:
       - numpy==1.25.2
       - pika==1.3.2
       - pre-commit=3.3.3
+      - pydantic-core==2.4.0
       - pytest==7.4.0
       - pytest-mock==3.11.1
       - requests==2.31.0
