--- a/environment.yaml
+++ b/environment.yaml
@@ -1,10 +1,12 @@
-name: climatoology
+name: ca-climatoology
 channels:
   - conda-forge
 dependencies:
   - pip=23.2
   - python=3.11.4
+  - pydantic=2.1.1
   - pandas=2.0.3
+  - pre-commit=3.3.3
   - rasterio=1.3.8
   - setuptools=68.0.0
   - wheel=0.40.0
@@ -15,7 +17,6 @@ dependencies:
       - minio==7.1.15
       - numpy==1.25.2
       - pika==1.3.2
-      - pre-commit=3.3.3
       - pydantic-core==2.4.0
       - pytest==7.4.0
       - pytest-mock==3.11.1
