--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "climatoology"
-version = "1.0"
+version = "2.0"
 description = "This package provides the underlying functionality to implement Climate Action Operators and Plugins."
 authors = [
   "Maciej Adamiak <maciej.adamiak@heigit.org>",
@@ -17,7 +17,6 @@ classifiers = [
 python = "~3.11.5"
 pika = "^1.3.2"
 pydantic = "^2.3.0"
-marshmallow-dataclass = "^8.5.14"
 bibtexparser = "^1.4.0"
 semver = "^3.0.1"
 minio = "^7.1.16"
@@ -25,6 +24,13 @@ rasterio = "^1.3.8"
 tqdm = "^4.66.1"
 requests = "^2.31.0"
 pillow = "^10.0.0"
+amqpstorm = "^2.10.6"
+cachetools = "^5.3.1"
+fastapi = "^0.103.1"
+uvicorn = {extras = ["standard"], version = "^0.23.2"}
+websocket = "^0.2.1"
+hydra-core = "^1.3.2"
+email-validator = "^2.0.0.post2"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.1"
