--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "~3.11.5"
-pika = "^1.3.2"
+aio_pika = "^9.3.0"
+async-cache = "^1.1.1"
 pydantic = "^2.3.0"
 bibtexparser = "^1.4.0"
 semver = "^3.0.1"
@@ -24,7 +25,7 @@ rasterio = "^1.3.8"
 tqdm = "^4.66.1"
 requests = "^2.31.0"
 pillow = "^10.0.0"
-amqpstorm = "^2.10.6"
+pamqp="^3.2.1"
 cachetools = "^5.3.1"
 fastapi = "^0.103.1"
 uvicorn = {extras = ["standard"], version = "^0.23.2"}
@@ -34,6 +35,7 @@ email-validator = "^2.0.0.post2"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.1"
+pytest_asyncio = "^0.21.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.4.0"
