--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ uvicorn = {extras = ["standard"], version = "^0.23.2"}
 websocket = "^0.2.1"
 hydra-core = "^1.3.2"
 email-validator = "^2.0.0.post2"
+pandas = "^2.1.1"
+geopandas = "^0.14.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.1"
