--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ hydra-core = "^1.3.2"
 email-validator = "^2.0.0.post2"
 pandas = "^2.1.1"
 geopandas = "^0.14.0"
+pydantic-extra-types = "^2.1.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.1"
