--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -13,3 +13,5 @@ broker:
   api_url: ${oc.env:RABBITMQ_API_URL}
   user: ${oc.env:RABBITMQ_USER}
   password: ${oc.env:RABBITMQ_PASSWORD}
+  connection_pool_max_size: ${oc.env:RABBITMQ_CONNECTION_POOL_SIZE,2}
+  assert_plugin_version: ${oc.env:ASSERT_PLUGIN_VERSION,True}
