--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ email-validator = "^2.0.0.post2"
 pandas = "~2.1.4"
 geopandas = "^0.14.0"
 pydantic-extra-types = "^2.1.0"
+sentinelhub = "^3.9.1"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.1"
