--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
     "Moritz Schott <moritz.schott@heigit.org>"
 ]
 readme = "README.md"
-repository = "https://gitlab.gistools.geog.uni-heidelberg.de/climate-action/climatoology"
+repository = "https://gitlab.heigit.org/climate-action/climatoology"
 classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
@@ -16,11 +16,11 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "~3.11.5"
 aio_pika = "^9.3.0"
-pydantic = "^2.3.0"
+pydantic = "2.8.2" # see https://gitlab.heigit.org/climate-action/climatoology/-/issues/105
 bibtexparser = "^1.4.0"
 semver = "^3.0.1"
 minio = "^7.1.16"
-rasterio = "1.3.9" # pinned version due to #103 caused by https://github.com/rasterio/rasterio/issues/3133
+rasterio = "1.3.11"
 tqdm = "^4.66.1"
 requests = "^2.31.0"
 pillow = "^10.0.0"
