--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ pandas = "~2.1.4"
 geopandas = "^0.14.0"
 pydantic-extra-types = "^2.1.0"
 sentinelhub = "^3.9.1"
+pyogrio = "^0.9.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.1"
