--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,6 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "~3.11.5"
-aio_pika = "^9.3.0"
 pydantic = "2.8.2" # see https://gitlab.heigit.org/climate-action/climatoology/-/issues/105
 bibtexparser = "^1.4.0"
 semver = "^3.0.1"
@@ -31,10 +30,12 @@ geopandas = "^0.14.0"
 pydantic-extra-types = "^2.1.0"
 sentinelhub = "^3.9.1"
 pyogrio = "^0.9.0"
+celery = { extras = ["sqlalchemy"], version = "^5.4.0" }
+pydantic-settings = "^2.6.0"
+psycopg2-binary = "^2.9.10"
 
 [tool.poetry.group.test.dependencies]
-pytest = "^7.4.1"
-pytest_asyncio = "^0.21.1"
+pytest = "^8.3.3"
 responses = "^0.24.1"
 
 [tool.poetry.group.dev.dependencies]
