--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ pyogrio = "^0.9.0"
 celery = { extras = ["sqlalchemy"], version = "^5.4.0" }
 pydantic-settings = "^2.6.0"
 psycopg2-binary = "^2.9.10"
+geojson-pydantic = "^1.1.2"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.3"
