--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,32 +15,30 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "~3.11.5"
-pydantic = "2.8.2" # see https://gitlab.heigit.org/climate-action/climatoology/-/issues/105
+pydantic = "^2.8.2"
+pydantic-extra-types = "^2.1.0"
+pydantic-settings = "^2.6.0"
+geojson-pydantic = "^1.1.2"
 bibtexparser = "^1.4.0"
 semver = "^3.0.1"
 minio = "^7.1.16"
-rasterio = "1.3.11"
+rasterio = "^1.3.11"
+sentinelhub = "^3.9.1"
 tqdm = "^4.66.1"
 requests = "^2.31.0"
-pillow = "^10.0.0"
-hydra-core = "^1.3.2"
+pillow = "^11.0.0"
 email-validator = "^2.0.0.post2"
-pandas = "~2.1.4"
-geopandas = "^0.14.0"
-pydantic-extra-types = "^2.1.0"
-sentinelhub = "^3.9.1"
-pyogrio = "^0.9.0"
+pandas = "^2.1.4"
+geopandas = "^1.0.1"
 celery = { extras = ["sqlalchemy"], version = "^5.4.0" }
-pydantic-settings = "^2.6.0"
 psycopg2-binary = "^2.9.10"
-geojson-pydantic = "^1.1.2"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.3"
-responses = "^0.24.1"
+responses = "^0.25.3"
 
 [tool.poetry.group.dev.dependencies]
-pre-commit = "^3.4.0"
+pre-commit = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core"]
