--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ pandas = "^2.1.4"
 geopandas = "^1.0.1"
 celery = { extras = ["sqlalchemy"], version = "^5.4.0" }
 psycopg2-binary = "^2.9.10"
+plotly = "^6.0.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.3"
