--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ psycopg2-binary = "^2.9.10"
 sqlalchemy = "^2.0.40"
 geoalchemy2 = "^0.17.1"
 plotly = "^6.0.0"
+time-machine = "^2.16.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.3"
