--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,13 @@
+stages:
+  - test
+  - test-coverage
+  - deploy
+
 unit_tests:
   stage: test
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+    - if: $CI_COMMIT_BRANCH == "main" && $CI_PIPELINE_SOURCE == 'push'
   image:
     name: python:3.11.5
   services:
@@ -29,5 +35,56 @@ unit_tests:
     - poetry config virtualenvs.in-project true
     - poetry install --with test,dev
   script:
+    - poetry run pytest --cov --cov-report term --cov-report xml:coverage.xml
     - poetry run pre-commit run --all-files
-    - poetry run pytest
+  coverage: '/TOTAL.*? (100(?:\.0+)?\%|[1-9]?\d(?:\.\d+)?\%)$/'
+  artifacts:
+    reports:
+      coverage_report:
+        coverage_format: cobertura
+        path: coverage.xml
+    paths:
+      - coverage.xml
+
+test_coverage_threshold:
+  stage: test-coverage
+  dependencies:
+    - unit_tests
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+    - if: $CI_COMMIT_BRANCH == "main" && $CI_PIPELINE_SOURCE == 'push'
+  image:
+    name: alpine:latest
+  script:
+    - coverage="$(sed -n 's/.*<coverage[^>]*line-rate="\([0-9.]*\)".*/\1/p' coverage.xml)"
+    - if (( $(echo "$coverage < 0.8" | bc -l) )); then
+        echo "Code coverage is only $(echo "$coverage*100" | bc)%. We recommend a minimum of 80%." && exit 1;
+      else
+        exit 0;
+      fi
+  allow_failure:
+    exit_codes:
+      - 1
+
+optional_linting:
+  stage: test
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+  image:
+    name: python:3.11.5
+  variables:
+    PRE_COMMIT_HOME: "$CI_PROJECT_DIR/.cache/pre-commit"
+  cache:
+    key: $CI_COMMIT_REF_NAME
+    paths:
+      - $PRE_COMMIT_HOME
+      - .venv
+  before_script:
+    - python3 -m venv .venv
+    - source .venv/bin/activate
+    - pip install pre-commit
+  script:
+    - pre-commit run -c .pre-commit-config-optional-linting.yaml --all-files
+  allow_failure:
+    exit_codes:
+      - 1
