--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,39 @@ responses = "^0.25.3"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.0.1"
+pytest-cov = "^6.1.1"
+
+[tool.ruff]
+line-length = 120
+
+[tool.ruff.format]
+quote-style = "single"
+
+[tool.ruff.lint.per-file-ignores]
+"climatoology/app/platform.py" = ["A005"] # `platform` shadows a Python standard-library module
+"climatoology/utility/*.py" = ["N999", "N818"] # module names do not follow the snake_case standard; we don't have Error suffix on exception names
+
+[tool.ruff.lint]
+# https://docs.astral.sh/ruff/rules
+select=[
+    # defaults
+    "F",
+    "E4", "E7", "E9",
+
+    # additional
+    "A", # be sure not to shadow built-in functions
+    "I", # isort to sort imports
+    "N", # check for use of PEP8 naming conventions
+
+    # docstring cleaning
+    "D201", "D207", "D208", "D209", "D210", "D214", "D215", "D300", "D403",
+
+    # auto-remove unused 'noqa' comments
+    "RUF100", "RUF101",
+]
+
+[tool.coverage.run]
+omit = ["test/*"]
 
 [build-system]
 requires = ["poetry-core"]
