--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,8 @@ responses = "^0.25.3"
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.0.1"
 pytest-cov = "^6.1.1"
+pandas-stubs = "^2.3.0.250703"
+celery-stubs = "^0.1.3"
 
 [tool.alembic]
 script_location = "%(here)s/climatoology/store/database/migration"
