--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
-[tool.poetry]
+[project]
 name = "climatoology"
 version = "6.4.3"
 description = "This package provides the underlying functionality to implement Climate Action Operators and Plugins and to interact with the backend."
 authors = [
-    "Maciej Adamiak <maciej.adamiak@heigit.org>",
-    "Moritz Schott <moritz.schott@heigit.org>",
-    "Danielle Gatland <danielle.gatland@heigit.org>"
+    { name = "Moritz Schott", email = "moritz.schott@heigit.org" },
+    { name = "Danielle Gatland", email = "danielle.gatland@heigit.org" },
+    { name = "Maciej Adamiak", email = "maciej.adamiak@heigit.org" },
 ]
 readme = "README.md"
 repository = "https://gitlab.heigit.org/climate-action/climatoology"
@@ -13,32 +13,32 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
 ]
-
-[tool.poetry.dependencies]
-python = "~3.13.5"
-pydantic = "^2.8.2"
-pydantic-extra-types = "^2.1.0"
-pydantic-settings = "^2.6.0"
-geojson-pydantic = "^2.0.0"
-bibtexparser = "^1.4.0"
-semver = "^3.0.1"
-minio = "^7.1.16"
-rasterio = "^1.3.11"
-sentinelhub = "^3.9.1"
-tqdm = "^4.66.1"
-requests = "^2.31.0"
-pillow = "^11.0.0"
-email-validator = "^2.0.0.post2"
-pandas = "^2.1.4"
-geopandas = "^1.0.1"
-celery = { extras = ["sqlalchemy"], version = "^5.4.0" }
-psycopg2-binary = "^2.9.10"
-sqlalchemy = "^2.0.40"
-geoalchemy2 = "^0.18.0"
-alembic = "^1.16.1"
-alembic-utils = "^0.8.8"
-alembic-postgresql-enum = "^1.7.0"
-plotly = "^6.0.0"
+requires-python = ">=3.13.5,<3.14"
+dependencies = [
+    "pydantic (>=2.8.2,<3.0.0)",
+    "pydantic-extra-types (>=2.1.0,<3.0.0)",
+    "pydantic-settings (>=2.6.0,<3.0.0)",
+    "geojson-pydantic (>=2.0.0,<3.0.0)",
+    "bibtexparser (>=1.4.0,<2.0.0)",
+    "semver (>=3.0.1,<4.0.0)",
+    "minio (>=7.1.16,<8.0.0)",
+    "rasterio (>=1.3.11,<2.0.0)",
+    "sentinelhub (>=3.9.1,<4.0.0)",
+    "tqdm (>=4.66.1,<5.0.0)",
+    "requests (>=2.31.0,<3.0.0)",
+    "pillow (>=11.0.0,<12.0.0)",
+    "email-validator (>=2.0.0.post2,<3.0.0)",
+    "pandas (>=2.1.4,<3.0.0)",
+    "geopandas (>=1.0.1,<2.0.0)",
+    "celery[sqlalchemy] (>=5.4.0,<6.0.0)",
+    "psycopg2-binary (>=2.9.10,<3.0.0)",
+    "sqlalchemy (>=2.0.40,<3.0.0)",
+    "geoalchemy2 (>=0.18.0,<0.19.0)",
+    "alembic (>=1.16.1,<2.0.0)",
+    "alembic-utils (>=0.8.8,<0.9.0)",
+    "alembic-postgresql-enum (>=1.7.0,<2.0.0)",
+    "plotly (>=6.0.0,<7.0.0)"
+]
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.3"
@@ -73,15 +73,12 @@ select = [
     # defaults
     "F",
     "E4", "E7", "E9",
-
     # additional
     "A", # be sure not to shadow built-in functions
     "I", # isort to sort imports
     "N", # check for use of PEP8 naming conventions
-
     # docstring cleaning
     "D201", "D207", "D208", "D209", "D210", "D214", "D215", "D300", "D403",
-
     # auto-remove unused 'noqa' comments
     "RUF100", "RUF101",
 ]
@@ -90,5 +87,5 @@ select = [
 omit = ["test/*"]
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
