--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ script_location = "%(here)s/climatoology/store/database/migration"
 prepend_sys_path = [
     "."
 ]
+file_template = "%%(year)d-%%(month).2d-%%(day).2dT%%(hour).2d-%%(minute).2d_%%(rev)s_%%(slug)s"
 
 [tool.ruff]
 line-length = 120
