--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ dependencies = [
     "alembic (>=1.16.1,<2.0.0)",
     "alembic-utils (>=0.8.8,<0.9.0)",
     "alembic-postgresql-enum (>=1.7.0,<2.0.0)",
-    "plotly (>=6.0.0,<7.0.0)"
+    "plotly (>=6.0.0,<7.0.0)",
 ]
 
 [tool.poetry.group.test.dependencies]
