--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ dependencies = [
     "pandas (>=2.1.4,<3.0.0)",
     "geopandas (>=1.0.1,<2.0.0)",
     "celery[sqlalchemy] (>=5.4.0,<6.0.0)",
-    "psycopg2-binary (>=2.9.10,<3.0.0)",
+    "psycopg[binary] (>=3.2.10,<4.0.0)",
     "sqlalchemy (>=2.0.40,<3.0.0)",
     "geoalchemy2 (>=0.18.0,<0.19.0)",
     "alembic (>=1.16.1,<2.0.0)",
