--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "celery[sqlalchemy] (>=5.4.0,<6.0.0)",
     "psycopg[binary] (>=3.2.10,<4.0.0)",
     "sqlalchemy (>=2.0.40,<3.0.0)",
+    "sqlalchemy-utils (>=0.42.0,<0.43.0)",
     "geoalchemy2 (>=0.18.0,<0.19.0)",
     "alembic (>=1.16.1,<2.0.0)",
     "alembic-utils (>=0.8.8,<0.9.0)",
