--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "pydantic-extra-types (>=2.1.0,<3.0.0)",
     "pydantic-settings (>=2.6.0,<3.0.0)",
     "geojson-pydantic (>=2.0.0,<3.0.0)",
+    "pydantic-shapely (>=1.0.0a5,<2.0.0)",
     "bibtexparser (>=1.4.0,<2.0.0)",
     "semver (>=3.0.1,<4.0.0)",
     "minio (>=7.1.16,<8.0.0)",
