dep(renovate): add lock-file maintenance
and auto-merging for patch updates and lock-file updates

--- a/.gitlab/renovate.json
+++ b/.gitlab/renovate.json
@@ -3,11 +3,17 @@
   "schedule": [
     "* * 1 * *"
   ],
+  "lockFileMaintenance": {
+    "enabled": true
+  },
   "packageRules": [
     {
       "matchUpdateTypes": [
-        "patch"
+        "patch",
+        "lockFileMaintenance"
       ],
+      "schedule": ["* 0-3 1 * *"],
+      "automerge": true,
       "groupName": "dependency patches"
     },
     {
