--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "pillow (>=12.0.0,<12.1.0)",
     "pandas (>=2.1.4,<3.0.0)",
     "geopandas (>=1.0.1,<2.0.0)",
+    "pyarrow (>=22.0.0,<23.0.0)",
     "celery[sqlalchemy] (>=5.4.0,<6.0.0)",
     "psycopg[binary] (>=3.2.10,<4.0.0)",
     "sqlalchemy (>=2.0.40,<3.0.0)",
