--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "climatoology"
-version = "6.4.4"
+version = "7.0.0-rc1"
 description = "This package provides the underlying functionality to implement Climate Action Operators and Plugins and to interact with the backend."
 authors = [
     { name = "Moritz Schott", email = "moritz.schott@heigit.org" },
