--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "alembic-utils (>=0.8.8,<0.9.0)",
     "alembic-postgresql-enum (>=1.7.0,<2.0.0)",
     "plotly (>=6.0.0,<7.0.0)",
+    "rasterstats (>=0.20.0,<0.21.0)",
 ]
 
 [project.scripts]
